Adjusted mobile menu and fixed overflow issues on html doc

--- a/themes/JLBTheme/sass/globals.sass
+++ b/themes/JLBTheme/sass/globals.sass
@@ -35,10 +35,12 @@
 
 // default styling
 html
+  overflow: hidden
   font-size: 0.83vw
   @media #{$hd}
     font-size: 16px
   body
+    overflow: hidden
     font-family: $font1
     color: $color1
     p 
